tests/cases_invalid/misc/struct/.expected
error: type `DuplicatedType` is defined multiple times
 --> ./cases_invalid/misc/struct/main.shd:3:8
  |
1 | struct DuplicatedType { field1: u32 }
  |        -------------- info: type with same name is defined here
2 | struct OtherType { field2: u32 }
3 | struct DuplicatedType { field3: u32 }
  |        ^^^^^^^^^^^^^^ duplicated type
  |

error: struct `NoField` without field
 --> ./cases_invalid/misc/struct/main.shd:5:8
  |
5 | struct NoField {}
  |        ^^^^^^^ invalid struct
  |

error: could not find `undef` type
 --> ./cases_invalid/misc/struct/main.shd:8:21
  |
8 |     undefined_type: undef,
  |                     ^^^^^ undefined type
  |
